@@ -1,3 +1,8 @@
+2004-01-12  Rodney Dawes  <dobey@ximian.com>
+
+	* gnome-wp-xml.c (gnome_wp_load_legacy): Fix previous change to
+	use gnome_wp_item_free () instead of g_free (), and fix tab width
+
 2004-01-12  Diego Gonzalez <diego@pemas.net>
 
 	* gnome-wp-xml.c (gnome_wp_load_legacy): don't crash if we could
